--- a/Secure-Stock-Exchange/Secure-Stock-Exchange.csproj
+++ b/Secure-Stock-Exchange/Secure-Stock-Exchange.csproj
@@ -45,6 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MarketByOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MarketByOrder.Designer.cs">
+      <DependentUpon>MarketByOrder.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MarketByPrice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MarketByPrice.Designer.cs">
+      <DependentUpon>MarketByPrice.cs</DependentUpon>
+    </Compile>
     <Compile Include="StockExchange.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,6 +65,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="MarketByOrder.resx">
+      <DependentUpon>MarketByOrder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MarketByPrice.resx">
+      <DependentUpon>MarketByPrice.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -65,6 +83,7 @@
     <EmbeddedResource Include="StockExchange.resx">
       <DependentUpon>StockExchange.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
