--- a/Secure-Stock-Exchange/Secure-Stock-Exchange.csproj
+++ b/Secure-Stock-Exchange/Secure-Stock-Exchange.csproj
@@ -65,6 +65,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StockStateSummary.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StockStateSummary.Designer.cs">
+      <DependentUpon>StockStateSummary.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MarketByOrder.resx">
       <DependentUpon>MarketByOrder.cs</DependentUpon>
     </EmbeddedResource>
@@ -82,6 +88,9 @@
     </Compile>
     <EmbeddedResource Include="StockExchange.resx">
       <DependentUpon>StockExchange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StockStateSummary.resx">
+      <DependentUpon>StockStateSummary.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
