--- a/Secure-Stock-Exchange/Secure-Stock-Exchange.csproj
+++ b/Secure-Stock-Exchange/Secure-Stock-Exchange.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Order.cs" />
+    <Compile Include="Company.cs" />
     <Compile Include="MarketByOrder.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +59,7 @@
     <Compile Include="MarketByPrice.Designer.cs">
       <DependentUpon>MarketByPrice.cs</DependentUpon>
     </Compile>
+    <Compile Include="RealTimeData.cs" />
     <Compile Include="StockExchange.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,6 +68,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StockMarket.cs" />
     <Compile Include="StockStateSummary.cs">
       <SubType>Form</SubType>
     </Compile>
