Numerous fixes, proper display of datatables from data now in effect

--- a/Secure-Stock-Exchange/Secure-Stock-Exchange.csproj
+++ b/Secure-Stock-Exchange/Secure-Stock-Exchange.csproj
@@ -31,6 +31,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Secure_Stock_Exchange.Program</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>UWO logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -142,6 +148,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\up.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="UWO logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
